--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,5 +9,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      
+      - name: Install dependencies
+        run: |
+          pip install pytest
+          pip install -r requirements.txt
+      
       - name: Run tests
-        run: echo "Tests werden ausgeführt"
+        run: pytest tests/
