--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,20 @@ jobs:
       
       - name: Run tests
         run: pytest tests/
+
+  Lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      
+      - name: Install flake8
+        run: pip install flake8
+      
+      - name: Run linting
+        run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
